ADD: Fix tryMove ADD: automatic " " to "_" conversion during search FIX: detect move files from root to root

--- a/src/FileChecker2.lpi
+++ b/src/FileChecker2.lpi
@@ -82,8 +82,16 @@
         <Filename Value="unit6.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="Form6"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit6"/>
+      </Unit>
+      <Unit>
+        <Filename Value="unit7.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="Form7"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="Unit7"/>
       </Unit>
     </Units>
   </ProjectOptions>
