ADD: preview of scan results ADD: Excplore to for folders

--- a/src/FileChecker2.lpi
+++ b/src/FileChecker2.lpi
@@ -114,6 +114,13 @@
         <Filename Value="../uncommenter.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="unit8.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="Form8"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="Unit8"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
