ADD: Start with sync formular

--- a/src/FileChecker2.lpi
+++ b/src/FileChecker2.lpi
@@ -124,12 +124,21 @@
         <Filename Value="unit8.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="Form8"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit8"/>
       </Unit>
       <Unit>
         <Filename Value="usslconnector.pas"/>
         <IsPartOfProject Value="True"/>
+      </Unit>
+      <Unit>
+        <Filename Value="unit9.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="Form9"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="Unit9"/>
       </Unit>
     </Units>
   </ProjectOptions>
@@ -175,6 +184,9 @@
       </Item>
       <Item>
         <Name Value="EFOpenError"/>
+      </Item>
+      <Item>
+        <Name Value="ESocketError"/>
       </Item>
     </Exceptions>
   </Debugging>
