--- a/src/FileChecker2.lpi
+++ b/src/FileChecker2.lpi
@@ -147,6 +147,14 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit10"/>
       </Unit>
+      <Unit>
+        <Filename Value="unit11.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="Form11"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="Unit11"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
